# jsonlogic-fast

./: .env.example  .gitignore  BENCHMARKS.md  BITACORA.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  benchmark_baseline.txt  deny.toml  docker-compose.yml  fix_imports.patch  main.py  mkdocs.yml  pyproject.toml  setup_db.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml  publish-crates.yml  publish-pypi.yml  security.yml
alembic/: env.py
alembic/versions/: 10651a6d92bd_initial_migration_with_multi_tenant.py  39a41920ba4d_compliance_hardening.py  af7ea7eee11c_initial_migration.py
benchmarks/: benchmark_pricing_engine.py  python_bench.py
core/: Cargo.toml  README.md
core/benches/: bench.rs
core/src/: error.rs  extract.rs  lib.rs
core/tests/: compatibility.rs  proptest.rs
data/: cff_2026_sample.json
docs/: api.md  codebase_audit_tasks_es.md  index.md  public_release_roadmap_es.md  sdk_node.md  sdk_python.md
examples/: credit_eligibility.py  feature_flags.rs  fraud_scoring.rs
examples/browser_wasm_demo/: index.html  package.json  vite.config.js
examples/browser_wasm_demo/src/: main.js
examples/python/: batch.py  evaluate.py
lex-mx-engine/: .env.example  Bitacora 26.02.25.md  docker-compose.yml  pyproject.toml
lex-mx-engine/src/core/: config.py
lex-mx-engine/src/domain/services/: compliance_engine.py
lex-mx-engine/tests/: test_validation.py
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
scripts/: benchmark_engine.py  draft_rule_from_dof.py  lex_cli.py  seed.py  seed_cff_2026.py  seed_core_universal.py  seed_pricing.py  seed_universal_rules.py  simulate_reform.py  sync_qdrant.py
src/core/: cache.py  config.py  security.py
src/domain/: exceptions.py  models.py
src/domain/schemas/: compliance.py  evaluate.py  management.py  norma.py  patch.py  pricing.py
src/domain/services/: compliance_engine.py  crypto.py  pricing_engine.py  resolver.py
src/infrastructure/: database.py  llm_client.py  repository.py  vector_store.py
src/interfaces/api/: dependencies.py  main.py
src/interfaces/api/routers/v1/: billing.py  compliance.py  history.py  management.py  normas.py  rules.py
src/pipeline/: patcher.py
src/pipeline/processors/: diff_engine.py  ocr.py
src/pipeline/scrapers/: dof_spider.py
tempus-dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json
tempus-dashboard/public/wasm/: package.json  tempus_wasm.d.ts  tempus_wasm.js  tempus_wasm_bg.wasm  tempus_wasm_bg.wasm.d.ts
tempus-dashboard/src/app/: globals.css  landing.module.css  layout.tsx  page.tsx  simulator.module.css
tempus-dashboard/src/app/api/simulate/: route.ts
tempus-dashboard/src/app/audit/: page.tsx
tempus-dashboard/src/app/builder/: builder.module.css  page.tsx
tempus-dashboard/src/app/dashboard/: page.tsx
tempus-dashboard/src/data/: templates.ts
tempus-dashboard/src/lib/: i18n.ts  wasm.ts
tempus-node/: example.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
tempus-node/src/: client.ts  index.ts  types.ts
tempus-python/: pyproject.toml
tempus-python/src/tempus/: __init__.py  client.py  types.py
tempus_core/: Cargo.toml
tempus_core/src/: lib.rs
tempus_wasm/: Cargo.toml
tempus_wasm/src/: lib.rs
tests/: benchmark_jsonschema.py  benchmark_pricing_engine.py  conftest.py  test_cache.py  test_compliance_engine.py  test_config.py  test_crypto.py  test_health_endpoints.py  test_integrity.py  test_pricing_engine.py  test_rules_api.py  test_security.py  test_validation.py  test_vulnerability_fix.py  verify_jwt_audience.py
tests/api/routers/v1/: test_rules.py
tests/python/: test_evaluate.py
wasm/: Cargo.toml  README.md  output.txt
wasm/src/: lib.rs
wasm/tests/: wasm_tests.rs
