[workspace]
members = ["core", "python", "wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JPatronC92/jsonlogic-fast"
homepage = "https://github.com/JPatronC92/jsonlogic-fast"
authors = ["JPatronC92"]

[workspace.dependencies]
serde_json = "1.0"
