[package]
name = "jsonlogic-fast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fast, embeddable, cross-runtime JSON-Logic evaluation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["json-logic", "rules", "engine", "deterministic", "wasm"]
categories = ["config", "wasm", "development-tools"]

[lib]
name = "jsonlogic_fast"

[dependencies]
jsonlogic = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
