[package]
name = "jsonlogic-fast-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for jsonlogic-fast"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["json-logic", "rules", "wasm", "browser", "deterministic"]
categories = ["wasm", "api-bindings", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jsonlogic-fast = { version = "0.1.1", path = "../core" }
serde = "1.0.228"
serde_json.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"
